ELK/elasticsearch-ingress.yaml
#Ingress for nginx
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-client
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - elasticsearch.denisrfe.jivacloud.com.br
  rules:
  - host: elasticsearch.denisrfe.jivacloud.com.br
    http:
      paths:
      - backend:
          serviceName: elasticsearch-client
          servicePort: 9200
